--- a/Countries/LoadWindow.xaml
+++ b/Countries/LoadWindow.xaml
@@ -7,10 +7,12 @@
         mc:Ignorable="d"
         Title="LoadWindow" Height="268.125" Width="350.938" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,0,0">
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Countries" VerticalAlignment="Top" FontSize="24" FontFamily="Consolas" Margin="0,20,0,0"/>
-        <TextBlock x:Name="tblockStatus" HorizontalAlignment="Left" Margin="92,89,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="160"/>
-        <ProgressBar x:Name="progressbar" HorizontalAlignment="Left" Height="15" Margin="92,128,0,0" VerticalAlignment="Top" Width="160"/>
-        <TextBlock x:Name="tbTime" HorizontalAlignment="Center" Margin="10,148,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="166" Height="79" TextAlignment="Center"/>
-        <Button x:Name="btnLoad" Margin="283,197,0,0" Width="40" Height="20" Click="Load_Click" Content="Load" IsEnabled="False"/>
+        <StackPanel>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Countries" VerticalAlignment="Top" FontSize="32" FontFamily="Consolas" Margin="0,20,0,0"/>
+        <TextBlock x:Name="tblockStatus" HorizontalAlignment="Center" Margin="0,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" />
+        <ProgressBar x:Name="progressbar" HorizontalAlignment="Center" Height="15" Margin="0,10,0,0" VerticalAlignment="Top" Width="160"/>
+        <TextBlock x:Name="tbTime" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="166" Height="Auto" TextAlignment="Center"/>
+        <Button x:Name="btnLoad" Margin="0,0,0,0" Width="40" Height="20" Click="Load_Click" Content="Load" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+        </StackPanel>
     </Grid>
 </Window>
