--- a/Countries/LoadWindow.xaml
+++ b/Countries/LoadWindow.xaml
@@ -5,14 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Countries"
         mc:Ignorable="d"
-        Title="LoadWindow" Height="268.125" Width="350.938" WindowStartupLocation="CenterScreen">
+        Title="Countries" Height="268" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="Resources/Countries_Icon.png">
     <Grid Margin="0,0,0,0">
         <StackPanel>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Countries" VerticalAlignment="Top" FontSize="32" FontFamily="Consolas" Margin="0,20,0,0"/>
-        <TextBlock x:Name="tblockStatus" HorizontalAlignment="Center" Margin="0,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" />
-        <ProgressBar x:Name="progressbar" HorizontalAlignment="Center" Height="15" Margin="0,10,0,0" VerticalAlignment="Top" Width="160"/>
-        <TextBlock x:Name="tbTime" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="166" Height="Auto" TextAlignment="Center"/>
-        <Button x:Name="btnLoad" Margin="0,0,0,0" Width="40" Height="20" Click="Load_Click" Content="Load" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+            <Image x:Name="Logo" HorizontalAlignment="Center"  Width="300" Margin="0,40,0,0" Source="/Resources/Countries_Logo.png"/>
+            <TextBlock Text="By Diogo Silva CET45" HorizontalAlignment="Right" Margin="0,0,20,0"></TextBlock>
+            <TextBlock x:Name="tbStatus" TextAlignment="Center" HorizontalAlignment="Center" Margin="0,15,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" />
+            <ProgressBar x:Name="progressbar" HorizontalAlignment="Center" Height="15" Margin="0,10,0,0" VerticalAlignment="Top" Width="160"/>
+            <TextBlock x:Name="tbTime" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="Auto" TextAlignment="Center"/>
+            <Button x:Name="btnRetry" Background="White" Width="40" Height="20" Click="btnRetry_Click" Content="Retry" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
         </StackPanel>
     </Grid>
 </Window>
